--- a/app/views/post_images/new.html.erb
+++ b/app/views/post_images/new.html.erb
@@ -18,7 +18,7 @@
                   <h2><%= @post_image.errors.count %>件のエラーが発生しました。</h2>
                   <ul>
                   <% @post_image.errors.full_messages.each do |message| %>
-                    <li><%= meassage %></li>
+                    <li><%= message %></li>
                   <% end %>
                   </ul>
                 </div>
